[gd_scene load_steps=22 format=3 uid="uid://c5qdlyo63gd5t"]

[ext_resource type="Script" uid="uid://4k7or8xxpivr" path="res://scenes/enemies/barnacle.gd" id="1_1dpm1"]
[ext_resource type="Texture2D" uid="uid://c06gxspg5i2qc" path="res://assets/placeholder/Tiles/tile_0070.png" id="2_p48n8"]
[ext_resource type="Texture2D" uid="uid://c4ybi8y0rc1jl" path="res://assets/objects/barnacle-tongue-piece.png" id="3_gq3cg"]
[ext_resource type="Texture2D" uid="uid://dgmvpdjyt0ut2" path="res://assets/objects/barnacle-tongue-end.png" id="4_b2vbb"]
[ext_resource type="Script" uid="uid://dou5h5mjmu8sy" path="res://components/spawner_component.gd" id="4_o407a"]
[ext_resource type="PackedScene" uid="uid://chvi67sx7uhx1" path="res://player/playeragdoll.tscn" id="5_odpbf"]
[ext_resource type="Texture2D" uid="uid://i6dpwldlq225" path="res://assets/objects/barnacle-sprites.png" id="6_gk5hb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmf5u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8suxj"]
size = Vector2(8, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubtu3"]
size = Vector2(20, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvhlt"]
size = Vector2(100, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_f01x7"]
atlas = ExtResource("6_gk5hb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_npdmi"]
atlas = ExtResource("6_gk5hb")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbmpj"]
atlas = ExtResource("6_gk5hb")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gxwx"]
atlas = ExtResource("6_gk5hb")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcqjg"]
atlas = ExtResource("6_gk5hb")
region = Rect2(96, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ievoy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f01x7")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_npdmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbmpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gxwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcqjg")
}],
"loop": true,
"name": &"new_animation",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation_1",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uifs6"]
size = Vector2(12, 20)

[sub_resource type="Animation" id="Animation_3bvnw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RigidBody2D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RigidBody2D3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RigidBody2D4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RigidBody2D5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RigidBody2D6:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RigidBody2D7:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RigidBody2D8:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ddaaj"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RigidBody2D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RigidBody2D3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RigidBody2D4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RigidBody2D5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RigidBody2D6:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RigidBody2D7:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RigidBody2D8:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_phjm3"]
_data = {
&"RESET": SubResource("Animation_3bvnw"),
&"new_animation": SubResource("Animation_ddaaj")
}

[node name="Barnacle" type="Node2D" groups=["barnacle", "enemies"]]
script = ExtResource("1_1dpm1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_p48n8")
flip_v = true

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2(0, 27)
node_a = NodePath("../rigids/RigidBody2D")
node_b = NodePath("../rigids/RigidBody2D2")

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2(0, 45)
node_a = NodePath("../rigids/RigidBody2D2")
node_b = NodePath("../rigids/RigidBody2D3")

[node name="PinJoint2D3" type="PinJoint2D" parent="."]
position = Vector2(0, 63)
node_a = NodePath("../rigids/RigidBody2D3")
node_b = NodePath("../rigids/RigidBody2D4")

[node name="PinJoint2D4" type="PinJoint2D" parent="."]
position = Vector2(0, 81)
node_a = NodePath("../rigids/RigidBody2D4")
node_b = NodePath("../rigids/RigidBody2D5")

[node name="PinJoint2D5" type="PinJoint2D" parent="."]
position = Vector2(0, 99)
node_a = NodePath("../rigids/RigidBody2D5")
node_b = NodePath("../rigids/RigidBody2D6")

[node name="PinJoint2D6" type="PinJoint2D" parent="."]
position = Vector2(0, 117)
node_a = NodePath("../rigids/RigidBody2D6")
node_b = NodePath("../rigids/RigidBody2D7")

[node name="PinJoint2D7" type="PinJoint2D" parent="."]
position = Vector2(0, 135)
node_a = NodePath("../rigids/RigidBody2D7")
node_b = NodePath("../rigids/RigidBody2D8")

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["piece"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_fmf5u")
disabled = true

[node name="PinJoint2D8" type="PinJoint2D" parent="."]
position = Vector2(0, 10)
node_a = NodePath("../StaticBody2D")
node_b = NodePath("../rigids/RigidBody2D")

[node name="PinJoint2D9" type="PinJoint2D" parent="."]
position = Vector2(0, 153)
node_a = NodePath("../rigids/RigidBody2D8")

[node name="rigids" type="Node2D" parent="."]
visible = false

[node name="RigidBody2D" type="RigidBody2D" parent="rigids" groups=["piece"]]
visible = false
position = Vector2(0, 18)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D"]
z_index = 1
texture = ExtResource("3_gq3cg")

[node name="RigidBody2D2" type="RigidBody2D" parent="rigids" groups=["piece"]]
visible = false
position = Vector2(0, 36)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D2"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D2"]
texture = ExtResource("3_gq3cg")

[node name="RigidBody2D3" type="RigidBody2D" parent="rigids" groups=["piece"]]
visible = false
position = Vector2(0, 54)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D3"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D3"]
texture = ExtResource("3_gq3cg")

[node name="RigidBody2D4" type="RigidBody2D" parent="rigids" groups=["piece"]]
visible = false
position = Vector2(0, 72)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D4"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D4"]
texture = ExtResource("3_gq3cg")

[node name="RigidBody2D5" type="RigidBody2D" parent="rigids" groups=["piece"]]
visible = false
position = Vector2(0, 90)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D5"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D5"]
texture = ExtResource("3_gq3cg")

[node name="RigidBody2D6" type="RigidBody2D" parent="rigids" groups=["piece"]]
visible = false
position = Vector2(0, 108)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D6"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D6"]
texture = ExtResource("3_gq3cg")

[node name="RigidBody2D7" type="RigidBody2D" parent="rigids" groups=["piece"]]
visible = false
position = Vector2(0, 126)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D7"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D7"]
texture = ExtResource("3_gq3cg")

[node name="RigidBody2D8" type="RigidBody2D" parent="rigids" groups=["piece"]]
visible = false
position = Vector2(0, 144)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D8"]
shape = SubResource("RectangleShape2D_8suxj")

[node name="Sprite2D2" type="Sprite2D" parent="rigids/RigidBody2D8"]
texture = ExtResource("4_b2vbb")
flip_v = true

[node name="Marker2D" type="Marker2D" parent="rigids/RigidBody2D8"]
position = Vector2(0, 19)
gizmo_extents = 33.8

[node name="Area2D" type="Area2D" parent="rigids/RigidBody2D8"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="rigids/RigidBody2D8/Area2D"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_ubtu3")

[node name="SpawnerComponent" type="Node2D" parent="rigids/RigidBody2D8"]
script = ExtResource("4_o407a")
scene = ExtResource("5_odpbf")

[node name="Killer" type="Area2D" parent="."]
position = Vector2(0, -30)
collision_layer = 3
collision_mask = 3
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killer"]
shape = SubResource("RectangleShape2D_lvhlt")

[node name="Sprite2D2" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_ievoy")
frame_progress = 1.0
offset = Vector2(-1, 0)
flip_v = true

[node name="wallLeft" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="wallLeft"]
position = Vector2(-17, 0)
shape = SubResource("RectangleShape2D_uifs6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wallLeft"]
position = Vector2(17, 0)
shape = SubResource("RectangleShape2D_uifs6")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="RegenTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../rigids")
libraries = {
&"": SubResource("AnimationLibrary_phjm3")
}

[connection signal="body_entered" from="rigids/RigidBody2D8/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Killer" to="." method="_on_killer_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
